// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chapter snapshots default theme 1`] = `
Array [
  .c0 {
  color: #2CC700;
  font-family: "GeomanistMedium",Arial,sans-serif;
  font-weight: 700;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 2px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  border-bottom: 5px solid #2CC700;
  margin-bottom: 15px;
}

.c1 {
  font-size: 25px;
}

.c2 {
  font-size: 12px;
  line-height: 19px;
  margin: 0 3px;
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      3
    </span>
    <span
      className="c2"
    >
      von
    </span>
    <span
      className="c1"
    >
      15
    </span>
  </div>,
  .c0 {
  color: #FFFFFF;
  font-family: "GeomanistMedium",Arial,sans-serif;
  font-weight: 700;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 2px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  border-bottom: 5px solid #FFFFFF;
  margin-bottom: 15px;
}

.c1 {
  font-size: 25px;
}

.c2 {
  font-size: 12px;
  line-height: 19px;
  margin: 0 3px;
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      3
    </span>
    <span
      className="c2"
    >
      von
    </span>
    <span
      className="c1"
    >
      15
    </span>
  </div>,
]
`;

exports[`Chapter snapshots second theme 1`] = `
Array [
  .c0 {
  color: #FF8135;
  font-family: "Lora-Bold",serif;
  font-weight: 700;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 2px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  border-bottom: 5px solid #FF8135;
  margin-bottom: 15px;
}

.c1 {
  font-size: 25px;
}

.c2 {
  font-size: 12px;
  line-height: 19px;
  margin: 0 3px;
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      3
    </span>
    <span
      className="c2"
    >
      von
    </span>
    <span
      className="c1"
    >
      15
    </span>
  </div>,
  .c0 {
  color: #FFFFFF;
  font-family: "Lora-Bold",serif;
  font-weight: 700;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 2px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  border-bottom: 5px solid #FFFFFF;
  margin-bottom: 15px;
}

.c1 {
  font-size: 25px;
}

.c2 {
  font-size: 12px;
  line-height: 19px;
  margin: 0 3px;
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      3
    </span>
    <span
      className="c2"
    >
      von
    </span>
    <span
      className="c1"
    >
      15
    </span>
  </div>,
]
`;

exports[`Chapter snapshots third theme 1`] = `
Array [
  .c0 {
  color: #009999;
  font-family: "Patua One",cursive;
  font-weight: 700;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 2px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  border-bottom: 5px solid #009999;
  margin-bottom: 15px;
}

.c1 {
  font-size: 25px;
}

.c2 {
  font-size: 12px;
  line-height: 19px;
  margin: 0 3px;
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      3
    </span>
    <span
      className="c2"
    >
      von
    </span>
    <span
      className="c1"
    >
      15
    </span>
  </div>,
  .c0 {
  color: #FFFFFF;
  font-family: "Patua One",cursive;
  font-weight: 700;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 2px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  border-bottom: 5px solid #FFFFFF;
  margin-bottom: 15px;
}

.c1 {
  font-size: 25px;
}

.c2 {
  font-size: 12px;
  line-height: 19px;
  margin: 0 3px;
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      3
    </span>
    <span
      className="c2"
    >
      von
    </span>
    <span
      className="c1"
    >
      15
    </span>
  </div>,
]
`;
